feat(maps): add leaflet wrapper

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
                 "glob": "**/*",
                 "input": "node_modules/@chakray/hero/assets",
                 "output": "assets/hero"
-              }, {
+              },
+              {
                 "glob": "404.html",
                 "input": "node_modules/@chakray/utils/gh-spa",
                 "output": "./"
@@ -139,6 +140,41 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "@chakray/maps": {
+      "root": "projects/chakray/maps",
+      "sourceRoot": "projects/chakray/maps/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/chakray/maps/tsconfig.lib.json",
+            "project": "projects/chakray/maps/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/chakray/maps/src/test.ts",
+            "tsConfig": "projects/chakray/maps/tsconfig.spec.json",
+            "karmaConfig": "projects/chakray/maps/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/chakray/maps/tsconfig.lib.json",
+              "projects/chakray/maps/tsconfig.spec.json"
+            ],
             "exclude": [
               "**/node_modules/**"
             ]
