--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@chakray/hero": "^0.2.0",
-    "@chakray/utils": "^0.2.0",
+    "@chakray/utils": "^0.3.0",
     "core-js": "^2.5.4",
+    "leaflet": "^1.5.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -32,11 +33,13 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-ng-packagr": "~0.13.0",
     "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.4.4",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "htmlhint": "^0.11.0",
@@ -47,10 +50,13 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.2.0",
     "protractor": "~5.4.0",
     "puppeteer": "^1.16.0",
     "sass-lint": "^1.13.1",
     "ts-node": "~7.0.0",
+    "tsickle": ">=0.34.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
   }
