fix(maps): input vendor

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ deploy:
   - provider: releases
     api_key: $github
     skip_cleanup: true
-    draft: true
+    # draft: true
     on:
       tags: true
 
